--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
-
 <body onload="fetchIssues()">
-    
     <div class="container">
         <h1>Issue Tracker <small>by David</small></h1>
         <div class="jumbotron">
@@ -23,11 +21,11 @@
             <form id="issueInputForm">
                 <div class="form-group">
                     <label for="issueDescInput">Description</label>
-                    <input name="description" type="text" class="form-control" id="issueDescInput" placeholder="Describe the issue ...">
+                    <input type="text" class="form-control" id="issueDescInput" placeholder="Describe the issue ...">
                 </div>
                 <div class="form-group">
                     <label for="issueDescInput">Severity</label>
-                    <select name="severity" class="form-control" id="issueSeverityInput">
+                    <select class="form-control" id="issueSeverityInput">
                         <option value="Low">Low</option>
                         <option value="Medium">Medium</option>
                         <option value="High">High</option>
@@ -35,9 +33,8 @@
                 </div>
                 <div class="form-group">
                     <label for="issueDescInput">Assigned To</label>
-                    <input name="assignedTo" type="text" class="form-control" id="issueAssignedToInput" placeholder="Enter responsible ...">
+                    <input type="text" class="form-control" id="issueAssignedToInput" placeholder="Enter responsible ...">
                 </div>
-
                 <button type="submit" class="btn btn-primary">Add</button>
             </form>
         </div>
@@ -50,13 +47,9 @@
         <div class="footer">
             <p>License: MIT</p>
         </div>
-
     </div>
     <script src="./js/jQuery.js"></script>
     <script src="./js/bootstrap.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chance/1.0.16/chance.min.js"></script>
-    <!-- <script src="./js/chance.js"></script> -->
     <script src="./js/main.js"></script>
 </body>
-
 </html>
